--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
       text-align: left;
     }
 
-    .modal h2 {
-      margin-top: 0;
-    }
+    .modal h2 { margin-top: 0; }
 
     .modal input,
     .modal textarea {
@@ -112,6 +110,6 @@
   </div>
 
   <script src="script.js"></script>
-
 </body>
 </html>
+
