--- a/index.html
+++ b/index.html
@@ -7,43 +7,106 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    /* MODAL */
+    /* ---------- MODERN STUDENT MODAL ---------- */
     .modal-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.5);
+      background: rgba(15, 23, 42, 0.55);
       display: none;
       justify-content: center;
       align-items: center;
       z-index: 1000;
+      backdrop-filter: blur(6px);
     }
 
     .modal {
-      background: white;
-      padding: 25px;
-      width: 360px;
-      border-radius: 12px;
+      background: #ffffff;
+      padding: 24px;
+      width: 380px;
+      border-radius: 16px;
       text-align: left;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.2);
+      border: 1px solid #f0f0f0;
     }
 
-    .modal h2 { margin-top: 0; }
+    .modal-header {
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      margin-bottom:12px;
+    }
+
+    .modal-header h2 {
+      margin:0;
+      font-size:20px;
+    }
+
+    .modal-close {
+      background: #f2f4f7;
+      border: none;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    .field-label {
+      font-size: 12px;
+      font-weight: 600;
+      color: #555;
+      margin-top: 8px;
+      display:block;
+    }
 
     .modal input,
     .modal textarea {
       width: 100%;
-      padding: 8px;
-      margin-bottom: 12px;
+      padding: 10px 12px;
+      margin-top: 4px;
+      margin-bottom: 10px;
       font-size: 14px;
+      border-radius: 10px;
+      border: 1px solid #e6e6e6;
+      background: #fafafa;
+      transition: border 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .modal input:focus,
+    .modal textarea:focus {
+      outline:none;
+      border:1px solid #0070c9;
+      box-shadow:0 0 0 3px rgba(0,112,201,0.2);
+      background:#fff;
     }
 
     .modal textarea {
       resize: none;
-      height: 80px;
+      height: 90px;
     }
 
     .modal-buttons {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
+      gap: 10px;
+      margin-top: 12px;
+    }
+
+    .btn-secondary {
+      padding: 8px 16px;
+      border-radius: 999px;
+      border: 1px solid #e0e0e0;
+      background: #f7f7f7;
+      cursor: pointer;
+    }
+
+    .btn-primary {
+      padding: 8px 18px;
+      border-radius: 999px;
+      border: none;
+      background: #0070c9;
+      color: white;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -95,21 +158,33 @@
   <!-- MODAL -->
   <div class="modal-overlay" id="modalOverlay">
     <div class="modal">
-      <h2>Submit Message</h2>
+      <div class="modal-header">
+        <h2>Submit Message</h2>
+        <button class="modal-close" onclick="closeModal()">✕</button>
+      </div>
 
-      <input type="text" id="firstName" placeholder="First Name (required)">
-      <input type="text" id="lastName" placeholder="Last Name (required)">
-      <input type="text" id="studentGrade" placeholder="Grade (required)">
-      <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
+      <label class="field-label">First Name</label>
+      <input type="text" id="firstName" placeholder="Required">
+
+      <label class="field-label">Last Name</label>
+      <input type="text" id="lastName" placeholder="Required">
+
+      <label class="field-label">Grade</label>
+      <input type="text" id="studentGrade" placeholder="Required">
+
+      <label class="field-label">Additional Notes</label>
+      <textarea id="extraNotes" placeholder="Optional"></textarea>
 
       <div class="modal-buttons">
-        <button onclick="closeModal()">Cancel</button>
-        <button onclick="submitMessage()">Submit</button>
+        <button class="btn-secondary" onclick="closeModal()">Cancel</button>
+        <button class="btn-primary" onclick="submitMessage()">Submit</button>
       </div>
     </div>
   </div>
 
   <script src="script.js"></script>
+
 </body>
 </html>
+
 
