--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    /* MODAL (modern + centered) */
+    /* MODAL (centered + modern) */
     .modal-overlay {
       position: fixed;
       inset: 0;
@@ -154,6 +154,7 @@
 
 </body>
 </html>
+
 
 
 
