--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
+    /* Make sizing consistent */
+    * { box-sizing: border-box; }
+
     /* MODAL (centered + modern) */
     .modal-overlay {
       position: fixed;
@@ -20,9 +23,10 @@
     }
 
     .modal {
+      width: 360px;
+      margin: 0 auto;
       background: #ffffff;
       padding: 28px 26px;
-      width: 360px;
       border-radius: 18px;
       text-align: center;
       box-shadow: 0 24px 60px rgba(0,0,0,0.22);
@@ -39,8 +43,9 @@
     .modal input,
     .modal textarea {
       width: 100%;
+      display: block;
+      margin: 0 auto 12px auto;
       padding: 11px 12px;
-      margin-bottom: 12px;
       font-size: 14px;
       border-radius: 12px;
       border: 1px solid #e6e8ec;
@@ -151,9 +156,9 @@
   </div>
 
   <script src="script.js"></script>
-
 </body>
 </html>
+
 
 
 
