--- a/index.html
+++ b/index.html
@@ -90,6 +90,48 @@
       background: #0070c9;
       color: white;
     }
+
+    /* Crisis numbers modal */
+    .crisis-modal {
+      width: min(560px, 92vw);
+      text-align: left;
+    }
+    .crisis-modal h2 {
+      text-align: center;
+    }
+    .crisis-list {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      font-size: 14px;
+      color: #0f172a;
+    }
+    .crisis-list strong { display: block; font-size: 15px; }
+    .crisis-section {
+      background: #f8fafc;
+      border: 1px solid #e2e8f0;
+      border-radius: 12px;
+      padding: 12px;
+    }
+    .crisis-actions {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      margin-top: 14px;
+    }
+    .crisis-actions button {
+      padding: 10px 18px;
+      border-radius: 999px;
+      border: none;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 600;
+    }
+    .crisis-actions .secondary { background: #f1f5f9; color: #334155; }
+    .crisis-actions .primary { background: #0070c9; color: #ffffff; }
   </style>
 </head>
 
@@ -137,6 +179,47 @@
     <button class="back-button" onclick="goToPage('page2')">Back</button>
   </div>
 
+  <!-- Crisis Numbers Modal -->
+  <div class="modal-overlay" id="crisisOverlay">
+    <div class="modal crisis-modal">
+      <h2>Immediate Support</h2>
+      <ul class="crisis-list">
+        <li class="crisis-section">
+          <strong>Emergency</strong>
+          911 – Emergency services (police / ambulance / fire) for life-threatening crises.
+        </li>
+        <li class="crisis-section">
+          <strong>Mental Health & Crisis Support</strong>
+          988 Suicide & Crisis Lifeline – Call or text 988 (24/7, free, confidential).<br>
+          National Suicide Prevention Lifeline – 1-800-273-TALK (8255).<br>
+          Crisis Text Line – Text HOME to 741741 (24/7).
+        </li>
+        <li class="crisis-section">
+          <strong>Eating Disorder Support</strong>
+          National Eating Disorders Association (NEDA) Helpline – 1-800-931-2237.<br>
+          Text NEDA to 741741.
+        </li>
+        <li class="crisis-section">
+          <strong>Domestic Violence Support</strong>
+          National Domestic Violence Hotline – 1-800-799-7233 (SAFE).<br>
+          Text START to 88788.
+        </li>
+        <li class="crisis-section">
+          <strong>Sexual Assault Support</strong>
+          RAINN – National Sexual Assault Hotline – 1-800-656-4673 (HOPE).
+        </li>
+        <li class="crisis-section">
+          <strong>Substance Abuse & Addiction Support</strong>
+          SAMHSA National Helpline – 1-800-662-HELP (4357).
+        </li>
+      </ul>
+      <div class="crisis-actions">
+        <button class="secondary" onclick="closeCrisisModal()">Close</button>
+        <button class="primary" onclick="continueFromCrisis()">Continue to Counselor</button>
+      </div>
+    </div>
+  </div>
+
   <!-- MODAL -->
   <div class="modal-overlay" id="modalOverlay">
     <div class="modal">
@@ -154,13 +237,81 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    let selectedReason = null;
+    let selectedUrgency = null;
+    let selectedCounselor = null;
+
+    function goToPage(id){
+      document.querySelectorAll(".page").forEach(p => p.classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+    }
+
+    function chooseReason(reason){
+      selectedReason = reason;
+      goToPage("page2");
+    }
+
+    function chooseUrgency(urgency){
+      selectedUrgency = urgency;
+      if(urgency === "I’m in Crisis"){
+        openCrisisModal();
+      } else {
+        goToPage("page3");
+      }
+    }
+
+    function openCrisisModal(){
+      document.getElementById("crisisOverlay").style.display = "flex";
+    }
+
+    function closeCrisisModal(){
+      document.getElementById("crisisOverlay").style.display = "none";
+    }
+
+    function continueFromCrisis(){
+      closeCrisisModal();
+      goToPage("page3");
+    }
+
+    function openModal(counselor){
+      selectedCounselor = counselor;
+      document.getElementById("modalOverlay").style.display = "flex";
+    }
+
+    function closeModal(){
+      document.getElementById("modalOverlay").style.display = "none";
+    }
+
+    function submitMessage(){
+      const firstName = document.getElementById("firstName").value.trim();
+      const lastName = document.getElementById("lastName").value.trim();
+      const grade = document.getElementById("studentGrade").value.trim();
+      const notes = document.getElementById("extraNotes").value.trim();
+
+      if(!firstName || !lastName || !grade){
+        alert("Please fill in required fields.");
+        return;
+      }
+
+      const entry = {
+        firstName,
+        lastName,
+        grade,
+        reason: selectedReason,
+        urgency: selectedUrgency,
+        notes,
+        counselor: selectedCounselor,
+        dateTime: new Date().toLocaleString()
+      };
+
+      const existing = JSON.parse(localStorage.getItem("studentMessages") || "[]");
+      existing.push(entry);
+      localStorage.setItem("studentMessages", JSON.stringify(existing));
+      closeModal();
+      alert("Message sent.");
+      goToPage("page1");
+    }
+  </script>
 </body>
 </html>
-
-
-
-
-
-
-
