--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
           <strong>Substance Abuse & Addiction Support</strong>
           SAMHSA National Helpline – 1-800-662-HELP (4357).
         </li>
+        <li class="crisis-section">
+          <strong>LGBTQ Youth Support</strong>
+          The Trevor Project – 1-866-488-7386 or text START to 678-678 (crisis intervention for LGBTQ youth).
+        </li>
       </ul>
       <div class="crisis-actions">
         <button class="secondary" onclick="closeCrisisModal()">Close</button>
@@ -315,3 +319,4 @@
   </script>
 </body>
 </html>
+
