--- a/index.html
+++ b/index.html
@@ -91,6 +91,45 @@
       color: white;
     }
 
+    /* Success modal */
+    .success-modal {
+      width: 320px;
+      text-align: center;
+    }
+    .success-icon {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      background: #16a34a;
+      color: #ffffff;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 28px;
+      font-weight: 700;
+      margin: 4px auto 10px auto;
+    }
+    .success-text {
+      font-size: 18px;
+      font-weight: 700;
+      color: #0f172a;
+      margin-bottom: 10px;
+    }
+    .success-actions {
+      display: flex;
+      justify-content: center;
+    }
+    .success-actions button {
+      padding: 10px 18px;
+      border-radius: 999px;
+      border: none;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 600;
+      background: #0070c9;
+      color: #ffffff;
+    }
+
     /* Crisis numbers modal */
     .crisis-modal {
       width: min(560px, 92vw);
@@ -242,6 +281,17 @@
     </div>
   </div>
 
+  <!-- Success Modal -->
+  <div class="modal-overlay" id="successOverlay">
+    <div class="modal success-modal">
+      <div class="success-icon">✓</div>
+      <div class="success-text">Message sent!</div>
+      <div class="success-actions">
+        <button onclick="closeSuccess()">OK</button>
+      </div>
+    </div>
+  </div>
+
   <script>
     let selectedReason = null;
     let selectedUrgency = null;
@@ -288,6 +338,15 @@
       document.getElementById("modalOverlay").style.display = "none";
     }
 
+    function openSuccess(){
+      document.getElementById("successOverlay").style.display = "flex";
+    }
+
+    function closeSuccess(){
+      document.getElementById("successOverlay").style.display = "none";
+      goToPage("page1");
+    }
+
     function submitMessage(){
       const firstName = document.getElementById("firstName").value.trim();
       const lastName = document.getElementById("lastName").value.trim();
@@ -319,9 +378,9 @@
       existing.push(entry);
       localStorage.setItem("studentMessages", JSON.stringify(existing));
       closeModal();
-      alert("Message sent.");
-      goToPage("page1");
+      openSuccess();
     }
   </script>
 </body>
 </html>
+
