--- a/index.html
+++ b/index.html
@@ -2,269 +2,108 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Support</title>
-  <link rel="stylesheet" href="style.css" />
-
   <style>
-    * { box-sizing: border-box; }
+    * { box-sizing: border-box; font-family: sans-serif; }
+    body { margin: 0; background: #f9fafb; text-align: center; }
 
-    /* MODAL (centered + modern) */
+    .page { display: none; padding: 20px; }
+    .page.active { display: block; }
+
+    button { padding: 10px 18px; border-radius: 12px; border: none; cursor: pointer; margin: 6px; background: #0070c9; color: white; }
+
+    /* Modal Styles */
     .modal-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(15, 23, 42, 0.55);
       display: none;
       justify-content: center;
       align-items: center;
+      background: rgba(15,23,42,0.55);
       z-index: 1000;
       backdrop-filter: blur(6px);
     }
-
     .modal {
-      width: 360px;
-      margin: 0 auto;
-      background: #ffffff;
-      padding: 28px 26px;
+      background: #fff;
+      padding: 28px;
       border-radius: 18px;
+      width: 360px;
       text-align: center;
       box-shadow: 0 24px 60px rgba(0,0,0,0.22);
-      border: 1px solid #eef2f7;
     }
-
-    .modal h2 {
-      margin: 0 0 14px 0;
-      font-size: 20px;
-      font-weight: 700;
-      color: #0f172a;
-    }
-
-    .modal input,
-    .modal textarea {
+    .modal input, .modal textarea {
       width: 100%;
-      display: block;
-      margin: 0 auto 12px auto;
-      padding: 11px 12px;
-      font-size: 14px;
+      margin: 8px 0;
+      padding: 10px;
       border-radius: 12px;
       border: 1px solid #e6e8ec;
-      background: #f9fafb;
-      text-align: center;
-      transition: border 0.2s ease, box-shadow 0.2s ease;
     }
+    .modal textarea { height: 80px; resize: none; }
+    .modal-buttons { display: flex; justify-content: center; gap: 12px; margin-top: 12px; }
+    .modal-buttons button { flex: 1; }
 
-    .modal input:focus,
-    .modal textarea:focus {
-      outline: none;
-      border: 1px solid #0070c9;
-      box-shadow: 0 0 0 3px rgba(0,112,201,0.2);
-      background: #ffffff;
-    }
-
-    .modal textarea {
-      resize: none;
-      height: 90px;
-    }
-
-    .modal-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      margin-top: 6px;
-    }
-
-    .modal-buttons button {
-      padding: 9px 18px;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      font-size: 14px;
-    }
-
-    .modal-buttons button:first-child {
-      background: #f1f5f9;
-      color: #334155;
-    }
-
-    .modal-buttons button:last-child {
-      background: #0070c9;
-      color: white;
-    }
+    /* Crisis modal styling */
+    .crisis-modal ul { text-align: left; padding-left: 0; list-style: none; }
+    .crisis-modal li { margin-bottom: 10px; background: #f8fafc; padding: 10px; border-radius: 12px; border: 1px solid #e2e8f0; }
+    .crisis-actions { display: flex; justify-content: center; gap: 10px; margin-top: 12px; }
+    .crisis-actions .secondary { background: #f1f5f9; color: #334155; }
+    .crisis-actions .primary { background: #0070c9; color: #fff; }
 
     /* Success modal */
-    .success-modal {
-      width: 320px;
-      text-align: center;
-    }
-    .success-icon {
-      width: 56px;
-      height: 56px;
-      border-radius: 50%;
-      background: #16a34a;
-      color: #ffffff;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 28px;
-      font-weight: 700;
-      margin: 4px auto 10px auto;
-    }
-    .success-text {
-      font-size: 18px;
-      font-weight: 700;
-      color: #0f172a;
-      margin-bottom: 10px;
-    }
-    .success-actions {
-      display: flex;
-      justify-content: center;
-    }
-    .success-actions button {
-      padding: 10px 18px;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 600;
-      background: #0070c9;
-      color: #ffffff;
-    }
-
-    /* Crisis numbers modal */
-    .crisis-modal {
-      width: min(560px, 92vw);
-      text-align: left;
-    }
-    .crisis-modal h2 {
-      text-align: center;
-    }
-    .crisis-list {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      font-size: 14px;
-      color: #0f172a;
-    }
-    .crisis-list strong { display: block; font-size: 15px; }
-    .crisis-section {
-      background: #f8fafc;
-      border: 1px solid #e2e8f0;
-      border-radius: 12px;
-      padding: 12px;
-    }
-    .crisis-actions {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      margin-top: 14px;
-    }
-    .crisis-actions button {
-      padding: 10px 18px;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 600;
-    }
-    .crisis-actions .secondary { background: #f1f5f9; color: #334155; }
-    .crisis-actions .primary { background: #0070c9; color: #ffffff; }
+    .success-icon { width: 50px; height: 50px; border-radius: 50%; background: #16a34a; color: white; font-size: 28px; display: flex; align-items: center; justify-content: center; margin: 10px auto; }
+    .success-text { font-weight: 700; font-size: 18px; margin-bottom: 12px; }
   </style>
 </head>
 
 <body>
 
-  <!-- Page 1 -->
+  <!-- Page 1: Select Reason -->
   <div class="page active" id="page1">
-    <img src="page1.png" alt="Welcome Page">
-
-    <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
-    <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
-    <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
-    <button class="hotspot family" onclick="chooseReason('Family issues or home stress')"></button>
-    <button class="hotspot relationship" onclick="chooseReason('Relationship or friendship problems')"></button>
-    <button class="hotspot bullying" onclick="chooseReason('Bullying or harassment')"></button>
-    <button class="hotspot talk" onclick="chooseReason('I just need someone to talk to')"></button>
-    <button class="hotspot unsure" onclick="chooseReason('I’m not ready to say')"></button>
+    <h2>Why are you reaching out?</h2>
+    <button onclick="chooseReason('Academic stress or pressure')">Academic stress or pressure</button>
+    <button onclick="chooseReason('Anxiety or panic attacks')">Anxiety or panic attacks</button>
+    <button onclick="chooseReason('Depression or sadness')">Depression or sadness</button>
+    <button onclick="chooseReason('Family issues or home stress')">Family issues or home stress</button>
+    <button onclick="chooseReason('Relationship or friendship problems')">Relationship or friendship problems</button>
+    <button onclick="chooseReason('Bullying or harassment')">Bullying or harassment</button>
+    <button onclick="chooseReason('I just need someone to talk to')">I just need someone to talk to</button>
+    <button onclick="chooseReason('I’m not ready to say')">I’m not ready to say</button>
   </div>
 
-  <!-- Page 2 -->
+  <!-- Page 2: Select Urgency -->
   <div class="page" id="page2">
-    <img src="page2.png" alt="Urgency Page">
-
-    <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
-    <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
-    <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
-    <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
-
-    <button class="back-button" onclick="goToPage('page1')">Back</button>
+    <h2>How urgent is this?</h2>
+    <button onclick="chooseUrgency('I’m Doing Fine – Just Curious')">I’m Doing Fine – Just Curious</button>
+    <button onclick="chooseUrgency('Feeling a Little Off')">Feeling a Little Off</button>
+    <button onclick="chooseUrgency('I’m Not Coping Well')">I’m Not Coping Well</button>
+    <button onclick="chooseUrgency('I’m in Crisis')">I’m in Crisis</button>
+    <br>
+    <button onclick="goToPage('page1')">Back</button>
   </div>
 
-  <!-- Page 3 -->
+  <!-- Page 3: Select Counselor -->
   <div class="page" id="page3">
-    <img src="page3.png" alt="Counselor Page">
-
-    <div class="counselor-grid">
-      <button onclick="openModal('miap2k10','miap2k10@gmail.com')">miap2k10@gmail.com</button>
-      <button onclick="openModal('kmcconnell','kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
-      <button onclick="openModal('gsorbi','gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
-      <button onclick="openModal('apanlilio','apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
-      <button onclick="openModal('aturner','aturner@smpanthers.org')">aturner@smpanthers.org</button>
-      <button onclick="openModal('cfilson','cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
-    </div>
-
-    <button class="back-button" onclick="goToPage('page2')">Back</button>
+    <h2>Choose Your Counselor</h2>
+    <button onclick="openModal('miap2k10@gmail.com')">miap2k10@gmail.com</button>
+    <button onclick="openModal('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
+    <button onclick="openModal('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
+    <button onclick="openModal('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
+    <button onclick="openModal('aturner@smpanthers.org')">aturner@smpanthers.org</button>
+    <button onclick="openModal('cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
+    <br>
+    <button onclick="goToPage('page2')">Back</button>
   </div>
 
-  <!-- Crisis Numbers Modal -->
-  <div class="modal-overlay" id="crisisOverlay">
-    <div class="modal crisis-modal">
-      <h2>Immediate Support</h2>
-      <ul class="crisis-list">
-        <li class="crisis-section"><strong>Emergency</strong>911 – Emergency services (police / ambulance / fire) for life-threatening crises.</li>
-        <li class="crisis-section"><strong>Mental Health & Crisis Support</strong>
-          988 Suicide & Crisis Lifeline – Call or text 988 (24/7, free, confidential).<br>
-          National Suicide Prevention Lifeline – 1-800-273-TALK (8255).<br>
-          Crisis Text Line – Text HOME to 741741 (24/7).
-        </li>
-        <li class="crisis-section"><strong>Eating Disorder Support</strong>
-          National Eating Disorders Association (NEDA) Helpline – 1-800-931-2237.<br>
-          Text NEDA to 741741.
-        </li>
-        <li class="crisis-section"><strong>Domestic Violence Support</strong>
-          National Domestic Violence Hotline – 1-800-799-7233 (SAFE).<br>
-          Text START to 88788.
-        </li>
-        <li class="crisis-section"><strong>Sexual Assault Support</strong>
-          RAINN – National Sexual Assault Hotline – 1-800-656-4673 (HOPE).
-        </li>
-        <li class="crisis-section"><strong>Substance Abuse & Addiction Support</strong>
-          SAMHSA National Helpline – 1-800-662-HELP (4357).
-        </li>
-        <li class="crisis-section"><strong>LGBTQ Youth Support</strong>
-          The Trevor Project – 1-866-488-7386 or text START to 678-678 (crisis intervention for LGBTQ youth).
-        </li>
-      </ul>
-      <div class="crisis-actions">
-        <button class="secondary" onclick="closeCrisisModal()">Close</button>
-        <button class="primary" onclick="continueFromCrisis()">Continue to Counselor</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- MODAL -->
+  <!-- Message Modal -->
   <div class="modal-overlay" id="modalOverlay">
     <div class="modal">
       <h2>Submit Message</h2>
-
       <input type="text" id="firstName" placeholder="First Name (required)">
       <input type="text" id="lastName" placeholder="Last Name (required)">
       <input type="text" id="studentGrade" placeholder="Grade (required)">
       <input type="text" id="studentId" placeholder="Student ID (required)">
       <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
-
       <div class="modal-buttons">
         <button onclick="closeModal()">Cancel</button>
         <button onclick="submitMessage()">Submit</button>
@@ -272,22 +111,39 @@
     </div>
   </div>
 
-  <!-- Success Modal -->
-  <div class="modal-overlay" id="successOverlay">
-    <div class="modal success-modal">
-      <div class="success-icon">✓</div>
-      <div class="success-text">Message sent!</div>
-      <div class="success-actions">
-        <button onclick="closeSuccess()">OK</button>
+  <!-- Crisis Modal -->
+  <div class="modal-overlay" id="crisisOverlay">
+    <div class="modal crisis-modal">
+      <h2>Immediate Support</h2>
+      <ul>
+        <li><strong>Emergency:</strong> 911</li>
+        <li><strong>Suicide & Crisis Line:</strong> 988</li>
+        <li><strong>Crisis Text Line:</strong> Text HOME to 741741</li>
+        <li><strong>Eating Disorders:</strong> 1-800-931-2237</li>
+        <li><strong>Domestic Violence:</strong> 1-800-799-7233</li>
+        <li><strong>Sexual Assault (RAINN):</strong> 1-800-656-4673</li>
+        <li><strong>LGBTQ Youth (Trevor Project):</strong> 1-866-488-7386</li>
+      </ul>
+      <div class="crisis-actions">
+        <button class="secondary" onclick="closeCrisisModal()">Close</button>
+        <button class="primary" onclick="continueFromCrisis()">Continue</button>
       </div>
     </div>
   </div>
 
+  <!-- Success Modal -->
+  <div class="modal-overlay" id="successOverlay">
+    <div class="modal">
+      <div class="success-icon">✓</div>
+      <div class="success-text">Message sent!</div>
+      <button onclick="closeSuccess()">OK</button>
+    </div>
+  </div>
+
   <script>
-    let selectedReason = null;
-    let selectedUrgency = null;
-    let selectedCounselor = null;
-    let selectedCounselorEmail = null;
+    let selectedReason = "";
+    let selectedUrgency = "";
+    let selectedCounselor = "";
 
     function goToPage(id){
       document.querySelectorAll(".page").forEach(p => p.classList.remove("active"));
@@ -308,37 +164,18 @@
       }
     }
 
-    function openCrisisModal(){
-      document.getElementById("crisisOverlay").style.display = "flex";
-    }
+    function openCrisisModal(){ document.getElementById("crisisOverlay").style.display = "flex"; }
+    function closeCrisisModal(){ document.getElementById("crisisOverlay").style.display = "none"; }
+    function continueFromCrisis(){ closeCrisisModal(); goToPage("page3"); }
 
-    function closeCrisisModal(){
-      document.getElementById("crisisOverlay").style.display = "none";
-    }
-
-    function continueFromCrisis(){
-      closeCrisisModal();
-      goToPage("page3");
-    }
-
-    function openModal(counselorUsername, counselorEmail){
-      selectedCounselor = counselorUsername;
-      selectedCounselorEmail = counselorEmail;
+    function openModal(email){
+      selectedCounselor = email.split("@")[0];
       document.getElementById("modalOverlay").style.display = "flex";
     }
+    function closeModal(){ document.getElementById("modalOverlay").style.display = "none"; }
 
-    function closeModal(){
-      document.getElementById("modalOverlay").style.display = "none";
-    }
-
-    function openSuccess(){
-      document.getElementById("successOverlay").style.display = "flex";
-    }
-
-    function closeSuccess(){
-      document.getElementById("successOverlay").style.display = "none";
-      goToPage("page1");
-    }
+    function openSuccess(){ document.getElementById("successOverlay").style.display = "flex"; }
+    function closeSuccess(){ document.getElementById("successOverlay").style.display = "none"; goToPage("page1"); }
 
     function submitMessage(){
       const firstName = document.getElementById("firstName").value.trim();
@@ -348,34 +185,35 @@
       const notes = document.getElementById("extraNotes").value.trim();
 
       if(!firstName || !lastName || !grade || !studentId){
-        alert("Please fill in required fields.");
-        return;
-      }
-      if(studentId !== "12345"){
-        alert("Student ID not recognized. Please check and try again.");
+        alert("Please fill in all required fields.");
         return;
       }
 
-      const entry = {
-        firstName,
-        lastName,
-        grade,
+      // Example authentication check for SIS
+      const enrolledStudents = ["12345","67890"]; // replace with SIS integration
+      if(!enrolledStudents.includes(studentId)){
+        alert("Student ID not recognized.");
+        return;
+      }
+
+      const messages = JSON.parse(localStorage.getItem("studentMessages") || "[]");
+      const dateTime = new Date().toLocaleString();
+
+      messages.push({
+        firstName, lastName, grade, studentId, notes,
         reason: selectedReason,
         urgency: selectedUrgency,
-        notes,
         counselor: selectedCounselor,
-        counselorEmail: selectedCounselorEmail,
-        dateTime: new Date().toLocaleString()
-      };
+        dateTime
+      });
 
-      const existing = JSON.parse(localStorage.getItem("studentMessages") || "[]");
-      existing.push(entry);
-      localStorage.setItem("studentMessages", JSON.stringify(existing));
+      localStorage.setItem("studentMessages", JSON.stringify(messages));
       closeModal();
       openSuccess();
     }
   </script>
 </body>
 </html>
+
 
 
