--- a/index.html
+++ b/index.html
@@ -76,14 +76,8 @@
   <!-- Page 3 -->
   <div class="page" id="page3">
     <img src="page3.png" alt="Counselor Page">
-    <div class="counselor-grid">
-      <button onclick="openModal('miap2k10','miap2k10@gmail.com')">miap2k10@gmail.com</button>
-      <button onclick="openModal('kmcconnell','kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
-      <button onclick="openModal('gsorbi','gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
-      <button onclick="openModal('apanlilio','apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
-      <button onclick="openModal('aturner','aturner@smpanthers.org')">aturner@smpanthers.org</button>
-      <button onclick="openModal('cfilson','cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
-    </div>
+    <!-- Dynamic counselor grid -->
+    <div class="counselor-grid" id="counselorGrid"></div>
     <button class="back-button" onclick="goToPage('page2')">Back</button>
   </div>
 
@@ -131,47 +125,6 @@
       </div>
     </div>
   </div>
-
-  <script>
-    let selectedReason=null, selectedUrgency=null, selectedCounselor=null, selectedCounselorEmail=null;
-
-    function goToPage(id){ document.querySelectorAll(".page").forEach(p=>p.classList.remove("active")); document.getElementById(id).classList.add("active"); }
-    function chooseReason(reason){ selectedReason=reason; goToPage("page2"); }
-    function chooseUrgency(urgency){ selectedUrgency=urgency; if(urgency==="I’m in Crisis") openCrisisModal(); else goToPage("page3"); }
-    function openCrisisModal(){ document.getElementById("crisisOverlay").style.display="flex"; }
-    function closeCrisisModal(){ document.getElementById("crisisOverlay").style.display="none"; }
-    function continueFromCrisis(){ closeCrisisModal(); goToPage("page3"); }
-    function openModal(username,email){ selectedCounselor=username; selectedCounselorEmail=email; document.getElementById("modalOverlay").style.display="flex"; }
-    function closeModal(){ document.getElementById("modalOverlay").style.display="none"; }
-    function openSuccess(){ document.getElementById("successOverlay").style.display="flex"; }
-    function closeSuccess(){ document.getElementById("successOverlay").style.display="none"; goToPage("page1"); }
-
-    async function submitMessage(){
-      const firstName=document.getElementById("firstName").value.trim();
-      const lastName=document.getElementById("lastName").value.trim();
-      const grade=document.getElementById("studentGrade").value.trim();
-      const studentId=document.getElementById("studentId").value.trim();
-      const notes=document.getElementById("extraNotes").value.trim();
-
-      if(!firstName||!lastName||!grade||!studentId){ alert("Please fill in required fields."); return; }
-
-      // ✅ SIS verification
-      try{
-        const res=await fetch("/api/verifyStudent",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({studentId,firstName,lastName})});
-        const verify=await res.json();
-        if(!verify.valid){ alert("Student ID not recognized."); return; }
-      }catch(err){ console.error(err); alert("Verification failed."); return; }
-
-      const entry={ firstName,lastName,grade,studentId,notes,reason:selectedReason,urgency:selectedUrgency,counselor:selectedCounselor,counselorEmail:selectedCounselorEmail,dateTime:new Date().toISOString() };
-
-      try{
-        const res=await fetch("/api/messages",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(entry)});
-        const data=await res.json();
-        if(!data.success) throw new Error("Failed to submit message");
-        closeModal(); openSuccess();
-      }catch(err){ console.error(err); alert("Failed to submit message."); }
-    }
-  </script>
 
 </body>
 </html>
