--- a/index.html
+++ b/index.html
@@ -76,8 +76,15 @@
   <!-- Page 3 -->
   <div class="page" id="page3">
     <img src="page3.png" alt="Counselor Page">
-    <!-- Dynamic counselor grid -->
-    <div class="counselor-grid" id="counselorGrid"></div>
+    <div class="counselor-grid" id="counselorGrid">
+      <!-- Hardcoded temporary buttons so they work immediately -->
+      <button onclick="openModal('miap2k10','miap2k10@gmail.com')">miap2k10@gmail.com</button>
+      <button onclick="openModal('kmcconnell','kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
+      <button onclick="openModal('gsorbi','gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
+      <button onclick="openModal('apanlilio','apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
+      <button onclick="openModal('aturner','aturner@smpanthers.org')">aturner@smpanthers.org</button>
+      <button onclick="openModal('cfilson','cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
+    </div>
     <button class="back-button" onclick="goToPage('page2')">Back</button>
   </div>
 
